docs/grammar.ebnf
input =
      list '\n'
    | list EOF
    | '\n'
    | EOF
;

list =
    and_or { ';' and_or }
;

and_or =
    pipeline { ( '&&' | '||' ) pipeline }
;

pipeline = 
    command_line { '|' command_line }
;

command_line =
    command [ redirect_list ]
;

command =
    WORD { WORD }        
;

redirect_list =
    redirect { redirect }
;

redirect =
      '>'  WORD
    | '1>' WORD
    | '2>' WORD
    | '>>' WORD
    | '1>>' WORD
    | '2>>' WORD
;
